[gd_scene load_steps=57 format=2]

[ext_resource path="res://chicken1.png" type="Texture" id=1]
[ext_resource path="res://chicken2.png" type="Texture" id=2]
[ext_resource path="res://chicken3.png" type="Texture" id=3]
[ext_resource path="res://chicken4.png" type="Texture" id=4]
[ext_resource path="res://Mob.gd" type="Script" id=5]
[ext_resource path="res://chicken_death18.png" type="Texture" id=6]
[ext_resource path="res://chicken_death20.png" type="Texture" id=7]
[ext_resource path="res://chicken_death19.png" type="Texture" id=8]
[ext_resource path="res://chicken_death21.png" type="Texture" id=9]
[ext_resource path="res://chicken_death1.png" type="Texture" id=10]
[ext_resource path="res://chicken_death22.png" type="Texture" id=11]
[ext_resource path="res://chicken_death2.png" type="Texture" id=12]
[ext_resource path="res://chicken_death5.png" type="Texture" id=13]
[ext_resource path="res://chicken_death3.png" type="Texture" id=14]
[ext_resource path="res://chicken_death4.png" type="Texture" id=15]
[ext_resource path="res://chicken_death7.png" type="Texture" id=16]
[ext_resource path="res://chicken_death6.png" type="Texture" id=17]
[ext_resource path="res://hit.wav" type="AudioStream" id=18]
[ext_resource path="res://chicken_death9.png" type="Texture" id=19]
[ext_resource path="res://chicken_death11.png" type="Texture" id=20]
[ext_resource path="res://chicken_death13.png" type="Texture" id=21]
[ext_resource path="res://chicken_death12.png" type="Texture" id=22]
[ext_resource path="res://chicken_death10.png" type="Texture" id=23]
[ext_resource path="res://chicken_death8.png" type="Texture" id=24]
[ext_resource path="res://chicken_death16.png" type="Texture" id=25]
[ext_resource path="res://chicken_death15.png" type="Texture" id=26]
[ext_resource path="res://chicken_death17.png" type="Texture" id=27]
[ext_resource path="res://chicken_death14.png" type="Texture" id=28]
[ext_resource path="res://chicken_death24.png" type="Texture" id=29]
[ext_resource path="res://chicken_death26.png" type="Texture" id=30]
[ext_resource path="res://chicken_death27.png" type="Texture" id=31]
[ext_resource path="res://chicken_death23.png" type="Texture" id=32]
[ext_resource path="res://chicken_death33.png" type="Texture" id=33]
[ext_resource path="res://chicken_death29.png" type="Texture" id=34]
[ext_resource path="res://chicken_death32.png" type="Texture" id=35]
[ext_resource path="res://chicken_death30.png" type="Texture" id=36]
[ext_resource path="res://chicken_death25.png" type="Texture" id=37]
[ext_resource path="res://chicken_death34.png" type="Texture" id=38]
[ext_resource path="res://chicken_death35.png" type="Texture" id=39]
[ext_resource path="res://chicken_death28.png" type="Texture" id=40]
[ext_resource path="res://chicken_death31.png" type="Texture" id=41]
[ext_resource path="res://chicken_death36.png" type="Texture" id=42]
[ext_resource path="res://mob_attack.wav" type="AudioStream" id=43]
[ext_resource path="res://chicken_attack1.png" type="Texture" id=44]
[ext_resource path="res://chicken_idle.png" type="Texture" id=45]
[ext_resource path="res://chicken_attack2.png" type="Texture" id=46]
[ext_resource path="res://chicken_dance8.png" type="Texture" id=47]
[ext_resource path="res://chicken_dance7.png" type="Texture" id=48]
[ext_resource path="res://chicken_dance3.png" type="Texture" id=49]
[ext_resource path="res://chicken_dance5.png" type="Texture" id=50]
[ext_resource path="res://chicken_dance4.png" type="Texture" id=51]
[ext_resource path="res://chicken_dance6.png" type="Texture" id=52]
[ext_resource path="res://chicken_dance2.png" type="Texture" id=53]
[ext_resource path="res://chicken_dance1.png" type="Texture" id=54]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 44 ), ExtResource( 46 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 54 ), ExtResource( 53 ), ExtResource( 49 ), ExtResource( 51 ), ExtResource( 50 ), ExtResource( 52 ), ExtResource( 48 ), ExtResource( 47 ) ],
"loop": true,
"name": "dance",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 24 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 21 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 27 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 32 ), ExtResource( 29 ), ExtResource( 37 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 40 ), ExtResource( 34 ), ExtResource( 36 ), ExtResource( 41 ), ExtResource( 35 ), ExtResource( 33 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 42 ) ],
"loop": false,
"name": "death",
"speed": 12.0
}, {
"frames": [ ExtResource( 45 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 15.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[node name="Mob" type="Area2D" groups=["mobs"]]
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "run"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 18 )
volume_db = 10.0

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 43 )

[connection signal="area_entered" from="." to="." method="_on_Mob_area_entered"]
